# xcc-integration

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile.xcc-mock  HACS_INSTALLATION.md  HIDDEN_SWITCHES.md  INTEGRATION_CHANGELOG.md  Makefile  README-integration.md  README.md  README_CZ.md  TESTING.md  XCC_SCRAPER_README.md  analyze_changeable_entities.py  analyze_nast_descriptor.py  debug_friendly_names.py  debug_real_xml.py  debug_xcc_xml.py  debug_xml_structure.py  demo_scraper.py  diagnose_xcc_connection.py  docker-compose.yml  enable_xcc_debug_logging.yaml  field_database.json  find_hidden_switches.py  fix_hacs.sh  fix_whitespace.py  hacs.json  hidden_switches_report.txt  nast_descriptor.xml  nast_nast10.xml  nast_nast11.xml  nast_nast21.xml  nast_nast4.xml  pyproject.toml  pytest-xcc.ini  pytest.ini  release_notes_v1.7.5.md  (+38 more)
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  hassfest.yaml  test.yml
custom_components/xcc/: README.md  __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  descriptor_parser.py  entity.py  entity_helpers.py  manifest.json  mqtt_discovery.py  number.py  select.py  sensor.py  strings.json  switch.py  value_writer.py  xcc_client.py
custom_components/xcc/translations/: cs.json
fresh_tuv_data/: discovery_summary.json
fresh_tuv_data/data/: AKU1.XML  BAZEN11.XML  BAZEN21.XML  BAZMIST1.XML  BIV1.XML  BIVTUV1.XML  FVE4.XML  OKRUH10.XML  POCASI1.XML  SOLAR1.XML  STAVJED1.XML  TUV11.XML  TUV21.XML
fresh_tuv_data/descriptors/: aku.xml  bazen1.xml  bazen2.xml  bazmist.xml  bivtuv.xml  pocasi.xml  solar.xml  tuv1.xml  tuv2.xml
ha-config/: configuration.yaml  home-assistant_v2.db-shm  home-assistant_v2.db-wal
ha-config/.storage/: assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  core.uuid  homeassistant.exposed_entities  http  http.auth  person
homeassistant/components/xcc/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  mqtt_discovery.py  select.py  sensor.py  switch.py  xcc_client.py
homeassistant/components/xcc/translations/: cs.json
mock_data/: STAVJED1.XML  current_values.json  stavjed.xml
mqtt-config/: mosquitto.conf
mqtt-data/: mosquitto.db
sample_data/: FVE.XML  FVE4.XML  SPOT1.XML  STAVJED1.XML  TUV11.XML  session.cookie
scripts/: analyze_known_pages.py  api_explorer.py  develop  fetch_sample_pages.py  lint  mock  setup  test
test/: __init__.py  test_analyze_pages.py  test_basic_functionality.py  test_cli_commands.py  test_xcc_controller.py
test/sample_pages/: INDEX.XML
tests/: __init__.py  conftest.py  requirements-test.txt  run_basic_tests.py  run_comprehensive_tests.py  test_basic_syntax.py  test_basic_validation.py  test_binary_sensor_integration.py  test_comprehensive_number_parsing.py  test_configurable_entity_device_assignment.py  test_coordinator.py  test_czech_comprehensive.py  test_czech_english_translations.py  test_czech_fix.py  test_czech_language_fix.py  test_data_gathering_health.py  test_data_incomplete_binary_sensor.py  test_date_fix_minimal.py  test_descriptor_debug.py  test_descriptor_parser.py  test_descriptor_parser_standalone.py  test_descriptor_visibility.py  test_device_assignment_fix.py  test_device_separation_integration.py  test_enhanced_entity_generation.py  test_entity_filtering.py  test_entity_naming.py  test_entity_setting_comprehensive.py  test_entity_updates.py  test_entity_value_setting.py  test_entity_value_updates_fix.py  test_first_refresh_and_datetime_unit_fix.py  test_friendly_name_entity_fix.py  test_friendly_names_fix.py  test_fve_config_entities.py  test_fve_config_switch_setting.py  test_fveinv_device_priority.py  test_fveinv_integration.py  test_fveinv_parsing.py  test_fvesoc_pages.py  (+62 more)
tests/sample_data/: BIV.XML  BIV1.XML  FVE4.XML  FVEINV.XML  FVEINV10.XML  FVESOC1.XML  LOGIN.XML  NAST1.XML  NAST2.XML  NAST3.XML  OKRUH.XML  OKRUH10.XML  SPOT.XML  STATUS.XML  STAVJED.XML  STAVJED1.XML  TUV1.XML  biv.xml  fve.xml  fvesoc.xml  main.xml
tests/test_xcc/: __init__.py  test_basic.py  test_config_flow_integration.py  test_connection.py  test_connection_validation.py  test_coordinator_entity_types.py  test_end_to_end_with_sample_data.py  test_imports.py  test_platform_setup_with_sample_data.py  test_regression_prevention.py
